<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/music"
...
        android:id="@+id/navigation_artists"
        android:icon="@drawable/mic"
        android:title="@string/artists"
        android:contentDescription="@string/artists" />

    <item
        android:id="@+id/navigation_collector"
        android:icon="@drawable/briefcase"
        android:title="@string/collectors" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/person"
...
