...
    <string name="telephone_label">Telefono del coleccionista</string>
    <string name="email_label">Email del coleccionista</string>
    <string name="albums_label">Albums del coleccionista</string>
    <string name="browse_artists">Browse artists</string>
    <string name="collector_name_title">Detalle del coleccionista %1$s</string>
    <string name="album_name_title">Detalle del álbum %1$s</string>
    <string name="no_albums_found">Este coleccionista no tiene albumes registrados</string>
    <string name="album_with_bullet">• %1$s</string>
    <string name="album_collector_description">Álbum: %1$s</string>
    <string name="artists_page">Página del artista</string>
    <string name="albums_page">Página de álbumes</string>
    <string name="collectors_page">Página de coleccionistas</string>
    <string-array name="genre_options">
...
